--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # next.js
 /.next/
@@ -15,9 +8,6 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -34,3 +24,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.env
