--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "amazon-cognito-identity-js": "^6.2.0",
+    "aws-sdk": "^2.1378.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
